Adicionando Testo no html

--- a/home.html
+++ b/home.html
@@ -10,10 +10,16 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Sobre</a></li>
+                <li><a href="#" id="sobre-link">Sobre</a></li>
                 <li><a href="cadatro.html" class="btn-destaque">Fazer Cadastro</a></li>
             </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            <h1>Bem-vindo ao Curso para Aprender a Fazer Sites</h1>
+            <p>Aprenda a criar sites profissionais do zero, com aulas práticas e suporte dedicado.</p>
+        </section>
+    </main>
 </body>
 </html>
