Linkando o JS ao Html

--- a/home.html
+++ b/home.html
@@ -21,5 +21,8 @@
             <p>Aprenda a criar sites profissionais do zero, com aulas práticas e suporte dedicado.</p>
         </section>
     </main>
+    <script src="javaScript/home.js"></script>
+    <footer>
+        <p>&copy; 2025 Curso de Desenvolvimento Web. Todos os direitos reservados.</p>
 </body>
 </html>
