--- a/cadastro.html
+++ b/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro - Curso para Aprender Fazer Sites</title>
-    <link rel="stylesheet" href="css/sobre.css">
+    <link rel="stylesheet" href="css/cadastro.css">
 </head>
 <body>
     <header>
@@ -28,16 +28,17 @@
                 <label for="cpf">CPF:</label>
                 <input type="text" id="cpf" name="cpf" required maxlength="14" placeholder="000.000.000-00">
 
-                <label for="endereco">Endereço:</label>
-                <input type="text" id="endereco" name="endereco" required>
-
                 <label for="cep">CEP:</label>
                 <input type="text" id="cep" name="cep" required maxlength="9" placeholder="00000-000">
+
+                <label for="endereco">Endereço:</label>
+                <input type="text" id="endereco" name="endereco" required>
 
                 <button type="submit" class="btn-destaque">Cadastrar</button>
             </form>
         </section>
     </main>
+    <script src="javaScript/cadastro.js"></script>
     <footer>
         <p>&copy; 2025 Curso de Desenvolvimento Web. Todos os direitos reservados.</p>
     </footer>
