alterando as cores e o posicionamento do footer

--- a/cadastro.html
+++ b/cadastro.html
@@ -34,6 +34,9 @@
                 <label for="endereco">Endereço:</label>
                 <input type="text" id="endereco" name="endereco" required>
 
+                <label for="numero">Número:</label>
+                <input type="text" id="numero" name="numero" required placeholder="Número da casa">
+
                 <button type="submit" class="btn-destaque">Cadastrar</button>
             </form>
         </section>
