--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,8 +10,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#" id="sobre-link">Sobre</a></li>
-                <li><a href="cadatro.html" class="btn-destaque">Fazer Cadastro</a></li>
+                <li><a href="sobre.html" id="sobre-link">Sobre</a></li>
+                <li><a href="cadastro.html" class="btn-destaque">Fazer Cadastro</a></li>
             </ul>
         </nav>
     </header>
@@ -21,8 +21,9 @@
             <p>Aprenda a criar sites profissionais do zero, com aulas práticas e suporte dedicado.</p>
         </section>
     </main>
-    <script src="javaScript/home.js"></script>
     <footer>
         <p>&copy; 2025 Curso de Desenvolvimento Web. Todos os direitos reservados.</p>
+    </footer>
+    <script src="javaScript/home.js"></script>
 </body>
 </html>
