--- a/sobre.html
+++ b/sobre.html
@@ -26,5 +26,8 @@
             </ul>
         </section>
     </main>
+    <script src="javaScript/home.js"></script>
+    <footer>
+        <p>&copy; 2025 Curso de Desenvolvimento Web. Todos os direitos reservados.</p>
 </body>
 </html>
